# docker-django-template

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  runserver.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
cron/: cron
diagrams/: architecture.puml  architecture.py  demo-architecture.puml  demo-architecture.py
docker/: cron.dockerfile
env/: app.env  database.env.example
locale/tl/LC_MESSAGES/: django.po
nginx/: nginx.conf
nginx/conf.d/: app.conf  web.conf
project/: settings.py  urls.py
sample/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
sample/migrations/: 0001_initial.py  0001_set_default_site.py
sample/migrations/allauth/account/: 0001_initial.py
sample/migrations/allauth/socialaccount/: 0001_initial.py
sample/migrations/sites/: 0001_initial.py  0002_default_site.py
sample/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
sample/templates/openid/: login.html
sample/templates/sample/: base.html  error.html  index.html  landing.html  login.html  protected.html  register.html  registered.html  verify-email.html  verify.html
sample/templates/socialaccount/: authentication_error.html  connections.html  login_cancelled.html  signup.html
sample/tests/: conftest.py  test_views.py
sample/tests/views/: test_cleanup_view.py  test_error_views.py  test_landing_view.py  test_login_view.py  test_protected_view.py  test_register_view.py  test_registered_view.py  test_verify_account_view.py
sample/views/: __init__.py  errors.py
