[tool.poetry]
name = "docker-django-template"
version = "1.0.4"
description = "Template repository for a Docker+Django project"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
daphne = "^3.0.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.6b0"
flake8 = "^3.8.4"
isort = "^5.9.1"
mypy = "^0.910"
coverage = "^5.3.1"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
addopts = """\
    -vv \
    --cov=sample \
    --cov-config pyproject.toml \
    --cov-report term-missing \
    --cov-report html\
    """
django_debug_mode = true

[tool.coverage.run]
source = ["sample"]
omit = ["*/test*", "*/apps.py", "*/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
