[tool.poetry]
name = "docker-django-template"
version = "2.1.1"
description = "Template repository for a Docker+Django project"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
daphne = "^3.0.1"
Django = "^3.2.14"
django-allauth = "^0.51.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.6"
black = "^22.8"
coverage = { extras = ["toml"], version = "^6.4" }
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pyproject-flake8 = "^5.0.4"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py
"""

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
addopts = """\
    -vv \
    -x \
    --cov=sample \
    --cov-report=term-missing \
    --cov-report=html \
    """
django_debug_mode = true

[tool.coverage.run]
source = ["sample"]
omit = ["*/test*", "*/apps.py", "*/migrations/*"]

[tool.mypy]
disallow_untyped_defs = true
exclude = "sample/migrations"

[[tool.mypy.overrides]]
module = [
    "allauth.*",
    "django.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
